# mac-dia-server-1

./: .env  .gitignore  README.md  dependencies.txt  index.html  pyproject.toml  run.sh  start.py
.cursor/rules/: auth-config.mdc  project-structure.mdc  tts-stt-api.mdc
src/: main.py  models.py  security.py  stt_logic.py  tts_logic.py
src/mac_dia_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
